--- a/my-solutions.css
+++ b/my-solutions.css
@@ -53,7 +53,7 @@
 }
 
 .ex-7-img:hover{
-  filter: grayscale(100%);
+  filter: sepia(50%) contrast(50%);
 }
 
 .ex-8-img{
@@ -61,7 +61,7 @@
 }
 
 .ex-8-img:hover{
-  filter: grayscale(100%);
+  filter: saturate(50%) contrast(70%);
   border-radius: 20px;
 }
 
@@ -70,7 +70,7 @@
 }
 
 .ex-9-img:hover{
-  filter: grayscale(100%);
+  filter: saturate(50%) sepia(70%);
   border-radius: 20px;
   width: 600px;
 }
